--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Miguel Coelho - #PorPernambuco</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="" />
+    <meta name="description" content="Nós queremos ouvir os Pernambucanos que vivem a realidade do estado e conhecem de perto todos os problemas. Envie sua sugestão!" />
 
-    <meta property="og:title" content="">
-    <meta property="og:site_name" content="">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Miguel Coelho - #PorPernambuco">
+    <meta property="og:site_name" content="Miguel Coelho - #PorPernambuco">
+    <meta property="og:description" content="Nós queremos ouvir os Pernambucanos que vivem a realidade do estado e conhecem de perto todos os problemas. Envie sua sugestão!">
     <meta property="og:image" content="assets/images/img-social.png">
     <meta name="twitter:card" content="assets/images/img-social.png">
 
@@ -32,8 +32,7 @@
     <link rel="manifest" href="assets/images/favicon/manifest.json">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b76ba38e19.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/hamburgers@1.1.3/dist/hamburgers.css" rel="stylesheet">
     <link href="assets/css/style.min.css" rel="stylesheet" type="text/css">
@@ -46,8 +45,53 @@
 <body>
     <!-- Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
-    <header></header>
-    <main></main>
+    <header>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col col-lg-2">
+                    <h1 class="logo">
+                        <a href="#" title="Miguel 44">
+                            Miguel 44
+                        </a>
+                    </h1>
+                </div>
+                <div class="col col-lg-10">
+                    <div class="menu">
+                        <button class="nav-button hamburger hamburger--squeeze" type="button">
+                                <span class="hamburger-box">
+                                    <span class="hamburger-inner"></span>
+                                </span>
+                            </button>
+                        <nav>
+                            <ul>
+                                <li><a href="#bio">Bio</a></li>
+                                <li><a href="#agenda">Agenda</a></li>
+                                <li><a href="#materiais">Materiais</a></li>
+                                <li><a href="#mobiliza">Mobiliza</a></li>
+                                <li><a href="#reconhecimentos">Reconhecimentos</a></li>
+                                <li><a href="#propostas">Propostas</a></li>
+                                <li><a href="#avaliacoes">Avaliacoes</a></li>
+                                <li>
+                                    <a target="_blank" href="#" class="btn btn-tertiary btn-lg btn-block">
+                                        Chama no zap <i class="fa-brands fa-whatsapp"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section id="bio"></section>
+        <section id="agenda"></section>
+        <section id="materiais"></section>
+        <section id="mobiliza"></section>
+        <section id="reconhecimentos"></section>
+        <section id="propostas"></section>
+        <section id="avaliacoes"></section>
+    </main>
     <footer></footer>
     <!--build:js assets/js/main.min.js -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
