fix: jquery menu

--- a/app/index.html
+++ b/app/index.html
@@ -58,10 +58,10 @@
                 <div class="col col-lg-10">
                     <div class="menu">
                         <button class="nav-button hamburger hamburger--squeeze" type="button">
-                                <span class="hamburger-box">
-                                    <span class="hamburger-inner"></span>
-                                </span>
-                            </button>
+                            <span class="hamburger-box">
+                                <span class="hamburger-inner"></span>
+                            </span>
+                        </button>
                         <nav>
                             <ul>
                                 <li><a href="#bio">Bio</a></li>
@@ -84,6 +84,7 @@
         </div>
     </header>
     <main>
+        <section id="home"></section>
         <section id="bio"></section>
         <section id="agenda"></section>
         <section id="materiais"></section>
