feat: incluindo todas as fontes e terminando o destaque

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,20 @@
         </div>
     </header>
     <main>
-        <section id="home"></section>
+        <section id="home">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="highlight-text">
+                            <div>
+                                <h2>Vamos resgatar o orgulho e a esperança dos pernambucanos</h2>
+                                <p>Com atitude, podemos construir um estado forte e altivo.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="bio"></section>
         <section id="agenda"></section>
         <section id="materiais"></section>
@@ -93,7 +106,35 @@
         <section id="propostas"></section>
         <section id="avaliacoes"></section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer-content"></section>
+        <section class="footer-logos">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col col-lg-2">
+                        <h6 class="logo">
+                            <a href="#" title="Miguel 44">
+                                Miguel 44
+                            </a>
+                        </h6>
+                    </div>
+                    <div class="col col-lg-10">
+                        <ul>
+                            <li class="uniao"><a target="_blank" href="#"></a></li>
+                            <li class="podemos"><a target="_blank" href="#"></a></li>
+                            <li class="patriota"><a target="_blank" href="#"></a></li>
+                            <li class="psc"><a target="_blank" href="#"></a></li>
+                            <li>
+                                <span>
+                                    Coligação Pernambuco com Força de Novo União Brasil, Podemos, Patriotas e PSC | CNPJ: 47.423.324/0001-04
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     <!--build:js assets/js/main.min.js -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/modernizr.min.js"></script>
