--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,76 @@
         <section id="avaliacoes"></section>
     </main>
     <footer>
-        <section class="footer-content"></section>
+        <section class="footer-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3 class="footerTitle">
+                            <span>Fique por dentro das novidades</span>
+                        </h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-lg-10">
+                                <div class="newsletterContent">
+                                    <p class="titleNewsLetter">Assine a nossa newsletter</p>
+                                    <p>Receba em primeira mão conteúdos exclusivos de Miguel e não perca nada.</p>
+                                    <p>
+                                        <a target="_blank" href="#" class="btn btn-light btn-lg btn-block">
+                                            Assinar agora
+                                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M14 15L22 7" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                                <path d="M14 7H22V15" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                            </svg>
+                                        </a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="row justify-content-end">
+                            <div class="col-lg-10">
+                                <nav class="footerMenu">
+                                    <ul>
+                                        <li><a href="#bio">Bio</a></li>
+                                        <li><a href="#agenda">Agenda</a></li>
+                                        <li><a href="#materiais">Materiais</a></li>
+                                        <li><a href="#mobiliza">Mobiliza</a></li>
+                                        <li><a href="#reconhecimentos">Reconhecimentos</a></li>
+                                        <li><a href="#propostas">Propostas</a></li>
+                                        <li><a href="#avaliacoes">Avaliacoes</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                        <div class="row align-items-center justify-content-end">
+                            <div class="col-lg-10">
+                                <div class="socialMenu">
+                                    <div class="row align-items-center">
+                                        <div class="col-lg-4">
+                                            <p>SIGA MIGUEL:</p>
+                                        </div>
+                                        <div class="col-lg-8">
+                                            <nav>
+                                                <ul>
+                                                    <li><a href="#" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a></li>
+                                                    <li><a href="#" target="_blank" title="facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                                                    <li><a href="#" target="_blank" title="twitter"><i class="fa-brands fa-twitter"></i></a></li>
+                                                    <li><a href="#" target="_blank" title="tiktok"><i class="fa-brands fa-tiktok"></i></a></li>
+                                                </ul>
+                                            </nav>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="footer-logos">
             <div class="container">
                 <div class="row align-items-center">
