arrumando o header e o footer pra mobile

--- a/app/index.html
+++ b/app/index.html
@@ -187,7 +187,7 @@
                             </a>
                         </h6>
                     </div>
-                    <div class="col col-lg-10">
+                    <div class="col-12 col-lg-10">
                         <ul>
                             <li class="uniao"><a target="_blank" href="#"></a></li>
                             <li class="podemos"><a target="_blank" href="#"></a></li>
