terminando a area de avaliações

--- a/app/index.html
+++ b/app/index.html
@@ -626,7 +626,103 @@
                 </div>
             </div>
         </section>
-        <section id="avaliacoes"></section>
+        <section id="avaliacoes">
+            <div class="container">
+                <div class="propostasContainer">
+                    <div class="row my-3">
+                        <div class="col-lg-12 text-center">
+                            <h3 class="sectionTitle">
+                                <span>Avaliações</span>
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="row mt-4">
+                        <div class="col-lg-12 text-center">
+                            <h4>
+                                Veja o que estão por aí<br />
+                                sobre Miguel
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="row my-5">
+                        <div class="col-lg-12 text-center">
+                            <svg width="55" height="20" viewBox="0 0 55 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M11.3733 3.192C9.87998 2.78133 8.49865 2.81866 7.22932 3.304C5.95998 3.78933 4.93332 4.62933 4.14932 5.824C3.40265 6.98133 2.97332 8.4 2.86132 10.08C4.31732 9.408 5.69865 9.184 7.00532 9.408C8.34932 9.59467 9.41332 10.136 10.1973 11.032C11.0186 11.928 11.4293 13.0107 11.4293 14.28C11.4293 15.2133 11.1866 16.0533 10.7013 16.8C10.2533 17.5467 9.63732 18.144 8.85332 18.592C8.06932 19.0027 7.21065 19.208 6.27731 19.208C5.15732 19.208 4.14932 18.9093 3.25332 18.312C2.39465 17.7147 1.72265 16.8373 1.23732 15.68C0.751982 14.5227 0.509315 13.1413 0.509315 11.536C0.471982 9.03467 0.957315 6.90667 1.96532 5.152C2.97332 3.36 4.33598 2.09067 6.05332 1.344C7.77065 0.597331 9.73065 0.503998 11.9333 1.064L11.3733 3.192ZM24.6453 3.192C23.152 2.78133 21.7706 2.81866 20.5013 3.304C19.232 3.78933 18.2053 4.62933 17.4213 5.824C16.6746 6.98133 16.2453 8.4 16.1333 10.08C17.5893 9.408 18.9706 9.184 20.2773 9.408C21.6213 9.59467 22.6853 10.136 23.4693 11.032C24.2906 11.928 24.7013 13.0107 24.7013 14.28C24.7013 15.2133 24.4586 16.0533 23.9733 16.8C23.5253 17.5467 22.9093 18.144 22.1253 18.592C21.3413 19.0027 20.4826 19.208 19.5493 19.208C18.4293 19.208 17.4213 18.9093 16.5253 18.312C15.6666 17.7147 14.9946 16.8373 14.5093 15.68C14.024 14.5227 13.7813 13.1413 13.7813 11.536C13.744 9.03467 14.2293 6.90667 15.2373 5.152C16.2453 3.36 17.608 2.09067 19.3253 1.344C21.0426 0.597331 23.0026 0.503998 25.2053 1.064L24.6453 3.192ZM43.628 16.688C45.1213 17.0987 46.5027 17.0613 47.772 16.576C49.0413 16.0907 50.0493 15.2693 50.796 14.112C51.58 12.9173 52.028 11.48 52.14 9.8C50.684 10.472 49.284 10.7147 47.94 10.528C46.6333 10.304 45.5693 9.744 44.748 8.848C43.964 7.952 43.572 6.86933 43.572 5.6C43.572 4.66667 43.796 3.82667 44.244 3.08C44.7293 2.33333 45.364 1.75467 46.148 1.344C46.932 0.895998 47.7907 0.671998 48.724 0.671998C49.844 0.671998 50.8333 0.970664 51.692 1.568C52.588 2.16533 53.2787 3.04267 53.764 4.2C54.2493 5.35733 54.492 6.73866 54.492 8.344C54.5293 10.8453 54.044 12.992 53.036 14.784C52.028 16.5387 50.6653 17.7893 48.948 18.536C47.2307 19.2827 45.2707 19.376 43.068 18.816L43.628 16.688ZM30.356 16.688C31.8493 17.0987 33.2307 17.0613 34.5 16.576C35.7693 16.0907 36.7773 15.2693 37.524 14.112C38.308 12.9173 38.756 11.48 38.868 9.8C37.412 10.472 36.012 10.7147 34.668 10.528C33.3613 10.304 32.2973 9.744 31.476 8.848C30.692 7.952 30.3 6.86933 30.3 5.6C30.3 4.66667 30.524 3.82667 30.972 3.08C31.4573 2.33333 32.092 1.75467 32.876 1.344C33.66 0.895998 34.5187 0.671998 35.452 0.671998C36.572 0.671998 37.5613 0.970664 38.42 1.568C39.316 2.16533 40.0067 3.04267 40.492 4.2C40.9773 5.35733 41.22 6.73866 41.22 8.344C41.2573 10.8453 40.772 12.992 39.764 14.784C38.756 16.5387 37.3933 17.7893 35.676 18.536C33.9587 19.2827 31.9987 19.376 29.796 18.816L30.356 16.688Z" fill="#212121"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="row my-5 justify-content-center">
+                        <div class="col-lg-9">
+                            <ul class="avaliacoesSlider">
+                                <li>
+                                    <p class="quote">Vamos eleger um governador pra mudar a história de Pernambuco! Porque Miguel já mudou a história de Petrolina!</p>
+                                    <p class="quoteUser">@elisania6</p>
+                                    <p class="quotePlace">via Instagram</p>
+                                </li>
+                                <li>
+                                    <p class="quote">Vamos eleger um governador pra mudar a história de Pernambuco! Porque Miguel já mudou a história de Petrolina!</p>
+                                    <p class="quoteUser">@elisania6</p>
+                                    <p class="quotePlace">via Instagram</p>
+                                </li>
+                                <li>
+                                    <p class="quote">Vamos eleger um governador pra mudar a história de Pernambuco! Porque Miguel já mudou a história de Petrolina!</p>
+                                    <p class="quoteUser">@elisania6</p>
+                                    <p class="quotePlace">via Instagram</p>
+                                </li>
+                                <li>
+                                    <p class="quote">Vamos eleger um governador pra mudar a história de Pernambuco! Porque Miguel já mudou a história de Petrolina!</p>
+                                    <p class="quoteUser">@elisania6</p>
+                                    <p class="quotePlace">via Instagram</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row my-5 numbersContent justify-content-center">
+                        <div class="col-lg-9 col-sm-9">
+                            <div class="row mb-5">
+                                <div class="col-lg-12 text-center">
+                                    <h5>
+                                        <span>
+                                            Números sobre a gestão de petrolina
+                                        </span>
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="row align-items-start numbersBox">
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="col-6 text-center">
+                                            <span class="numbersCount">88%</span>
+                                        </div>
+                                        <div class="col-6">
+                                            <p>
+                                                de aprovação<br />
+                                                do povo
+                                            </p>
+                                            <p>Fonte: <a href="#">IPESP</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="col-6 text-center">
+                                            <span class="numbersCount">90%</span>
+                                        </div>
+                                        <div class="col-6">
+                                            <p>
+                                                das propostas<br />
+                                                cumpridas
+                                            </p>
+                                            <p><a href="#">Confira aqui</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="footer-content">
