--- a/app/index.html
+++ b/app/index.html
@@ -66,11 +66,11 @@
                             <ul>
                                 <li><a href="#bio">Bio</a></li>
                                 <li><a href="#agenda">Agenda</a></li>
-                                <li><a href="#materiais">Materiais</a></li>
-                                <li><a href="#mobiliza">Mobiliza</a></li>
-                                <li><a href="#reconhecimentos">Reconhecimentos</a></li>
+                                <li><a href="#materiais">Acervo</a></li>
+                                <li><a href="#mobiliza">Bora conversar?</a></li>
+                                <li><a href="#reconhecimentos">Referência</a></li>
                                 <li><a href="#propostas">Propostas</a></li>
-                                <li><a href="#avaliacoes">Avaliacoes</a></li>
+                                <li><a href="#avaliacoes">Avaliações</a></li>
                                 <li>
                                     <a target="_blank" href="#" class="btn btn-tertiary btn-lg btn-block">
                                         Chama no zap <i class="fa-brands fa-whatsapp"></i>
@@ -107,9 +107,7 @@
                     <div class="col-lg-6">
                         <div class="row mt-lg-5 mt-0 mb-2">
                             <div class="col-lg-12">
-                                <h3 class="sectionTitle">
-                                    <span>Bio</span>
-                                </h3>
+
                             </div>
                         </div>
                         <div class="row mt-2 mb-5">
@@ -405,7 +403,7 @@
                 <div class="row my-3">
                     <div class="col-lg-12">
                         <h3 class="sectionTitle">
-                            <span>Materiais</span>
+                            <span>Acervo</span>
                         </h3>
                     </div>
                 </div>
@@ -529,7 +527,7 @@
                             <div class="row mt-lg-5 mt-0 mb-2">
                                 <div class="col-lg-12">
                                     <h3 class="sectionTitle">
-                                        <span>Mobiliza</span>
+                                        <span>Bora conversar?</span>
                                     </h3>
                                 </div>
                             </div>
@@ -565,7 +563,7 @@
                 <div class="row mt-lg-5 mt-0 mb-2">
                     <div class="col-lg-12 text-center">
                         <h3 class="sectionTitle">
-                            <span>Reconhecimentos</span>
+                            <span>Referência</span>
                         </h3>
                     </div>
                 </div>
@@ -591,7 +589,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="textContent">
-                                    <p>Melhor cidade parase viver no Nordeste</p>
+                                    <p>Melhor cidade para se viver no Nordeste</p>
                                 </div>
                             </div>
                         </div>
@@ -633,7 +631,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="textContent">
-                                    <p>Melhor cidade do Brasil no setor de agronegócio </p>
+                                    <p>Melhor cidade do Brasil para o Agronegócio</p>
                                 </div>
                             </div>
                         </div>
@@ -661,7 +659,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="textContent">
-                                    <p>TOP 10 cidades com melhor atendimento na saúde</p>
+                                    <p>Eleita entre as 10 cidades com melhor atendimento na saúde</p>
                                 </div>
                             </div>
                         </div>
@@ -732,7 +730,7 @@
                                     </svg>
                                 </div>
                                 <h5>Programa Estado de Paz</h5>
-                                <p>Integrar 9 mil guardas municipais com as forças de segurança.</p>
+                                <p>Investir R$ 1 bilhão na segurança pública do Estado</p>
                             </div>
                         </div>
                         <div class="col-lg-3 px-lg-0">
@@ -775,7 +773,7 @@
                                     </svg>
                                 </div>
                                 <h5>Recuperação da malha viária</h5>
-                                <p>Duplicar a BR-232 de São Caetano a Custódia.</p>
+                                <p>Programa de manutenção contínua das rodovias estaduais</p>
                             </div>
                         </div>
                         <div class="col-lg-3 px-lg-0">
@@ -796,7 +794,7 @@
                                         <path d="M47.58 41.5796H43.29C42.45 41.5796 41.79 40.9196 41.79 40.0796C41.79 39.2396 42.45 38.5796 43.29 38.5796H47.58C48.42 38.5796 49.08 39.2396 49.08 40.0796C49.08 40.9196 48.42 41.5796 47.58 41.5796Z" fill="#F1F4F5"/>
                                     </svg>
                                 </div>
-                                <h5>Construir 5 novos hospitais</h5>
+                                <h5>Reformar os 6 maiores hospitais do estados</h5>
                                 <p>Reforma dos seis maiores hospitais estaduais.</p>
                             </div>
                         </div>
@@ -903,8 +901,8 @@
                     <div class="row mt-4">
                         <div class="col-lg-12 text-center">
                             <h4>
-                                Veja o que estão por aí<br />
-                                sobre Miguel
+                                Veja o que estão dizendo<br />
+                                de Miguel por aí
                             </h4>
                         </div>
                     </div>
@@ -963,7 +961,7 @@
                                                 de aprovação<br />
                                                 do povo
                                             </p>
-                                            <p>Fonte: <a href="#">IPESP</a></p>
+                                            <p>Fonte: <a href="#">IPESPE</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -1025,11 +1023,11 @@
                                     <ul>
                                         <li><a href="#bio">Bio</a></li>
                                         <li><a href="#agenda">Agenda</a></li>
-                                        <li><a href="#materiais">Materiais</a></li>
-                                        <li><a href="#mobiliza">Mobiliza</a></li>
-                                        <li><a href="#reconhecimentos">Reconhecimentos</a></li>
+                                        <li><a href="#materiais">Acervo</a></li>
+                                        <li><a href="#mobiliza">Bora conversa?</a></li>
+                                        <li><a href="#reconhecimentos">Referência</a></li>
                                         <li><a href="#propostas">Propostas</a></li>
-                                        <li><a href="#avaliacoes">Avaliacoes</a></li>
+                                        <li><a href="#avaliacoes">Avaliações</a></li>
                                     </ul>
                                 </nav>
                             </div>
