fix: ajustes do UX

--- a/app/index.html
+++ b/app/index.html
@@ -440,6 +440,16 @@
                             </div>
                             <h5>Logotipo</h5>
                             <p>Arquivos da identidade visual de Miguel e Alessandra para você usar nos seus materiais.</p>
+                            <p>
+                                <a target="_blank" href="#" class="btn btn-primary btn-lg btn-block">
+                                    Baixar agora
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M23 12.3333V14.7777C23 15.1018 22.8712 15.4127 22.642 15.6419C22.4128 15.8711 22.1019 15.9999 21.7778 15.9999H13.2222C12.8981 15.9999 12.5872 15.8711 12.358 15.6419C12.1288 15.4127 12 15.1018 12 14.7777V12.3333" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M14.4445 9.27783L17.5 12.3334L20.5556 9.27783" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5 12.3333V5" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -455,6 +465,16 @@
                             </div>
                             <h5>Adesivos</h5>
                             <p>Aqui tem praguinhas, perfurados e outros modelos de adesivos para você colar por aí.</p>
+                            <p>
+                                <a target="_blank" href="#" class="btn btn-primary btn-lg btn-block">
+                                    Baixar agora
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M23 12.3333V14.7777C23 15.1018 22.8712 15.4127 22.642 15.6419C22.4128 15.8711 22.1019 15.9999 21.7778 15.9999H13.2222C12.8981 15.9999 12.5872 15.8711 12.358 15.6419C12.1288 15.4127 12 15.1018 12 14.7777V12.3333" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M14.4445 9.27783L17.5 12.3334L20.5556 9.27783" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5 12.3333V5" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -470,6 +490,16 @@
                             </div>
                             <h5>Jingles</h5>
                             <p>Dezenas de jingles pra você baixar, colocar no paredão ou mandar no zap pra galera.</p>
+                            <p>
+                                <a target="_blank" href="#" class="btn btn-primary btn-lg btn-block">
+                                    Baixar agora
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M23 12.3333V14.7777C23 15.1018 22.8712 15.4127 22.642 15.6419C22.4128 15.8711 22.1019 15.9999 21.7778 15.9999H13.2222C12.8981 15.9999 12.5872 15.8711 12.358 15.6419C12.1288 15.4127 12 15.1018 12 14.7777V12.3333" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M14.4445 9.27783L17.5 12.3334L20.5556 9.27783" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5 12.3333V5" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -481,6 +511,16 @@
                             </div>
                             <h5>Bandeiras</h5>
                             <p>Arquivos oficiais das bandeiras pra você colocar no carro, pendurar na janela e levar por aí.</p>
+                            <p>
+                                <a target="_blank" href="#" class="btn btn-primary btn-lg btn-block">
+                                    Baixar agora
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M23 12.3333V14.7777C23 15.1018 22.8712 15.4127 22.642 15.6419C22.4128 15.8711 22.1019 15.9999 21.7778 15.9999H13.2222C12.8981 15.9999 12.5872 15.8711 12.358 15.6419C12.1288 15.4127 12 15.1018 12 14.7777V12.3333" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M14.4445 9.27783L17.5 12.3334L20.5556 9.27783" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5 12.3333V5" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -493,6 +533,16 @@
                             </div>
                             <h5>Figurinhas do Zap</h5>
                             <p>Figurinhas para você usar nas suas conversas do Zap e compartilhar com a galera.</p>
+                            <p>
+                                <a target="_blank" href="#" class="btn btn-primary btn-lg btn-block">
+                                    Baixar agora
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M23 12.3333V14.7777C23 15.1018 22.8712 15.4127 22.642 15.6419C22.4128 15.8711 22.1019 15.9999 21.7778 15.9999H13.2222C12.8981 15.9999 12.5872 15.8711 12.358 15.6419C12.1288 15.4127 12 15.1018 12 14.7777V12.3333" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M14.4445 9.27783L17.5 12.3334L20.5556 9.27783" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5 12.3333V5" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -506,6 +556,16 @@
                             </div>
                             <h5>Fotos oficiais</h5>
                             <p>Fotos em alta resolução de Miguel, Alessandra e Carlos para você usar em materiais de campanha.</p>
+                            <p>
+                                <a target="_blank" href="#" class="btn btn-primary btn-lg btn-block">
+                                    Baixar agora
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M23 12.3333V14.7777C23 15.1018 22.8712 15.4127 22.642 15.6419C22.4128 15.8711 22.1019 15.9999 21.7778 15.9999H13.2222C12.8981 15.9999 12.5872 15.8711 12.358 15.6419C12.1288 15.4127 12 15.1018 12 14.7777V12.3333" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M14.4445 9.27783L17.5 12.3334L20.5556 9.27783" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M17.5 12.3333V5" stroke="#F1F4F5" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                </a>
+                            </p>
                         </div>
                     </div>
                 </div>
